# Crow-Engine

./: .gitignore  .gitmodules  Modules.md  Project Structure.md  README.md
CrowEngine/: .clang-format  CMakeLists.txt  CompileShaders.bat
CrowEngine/include/: CMakeLists.txt  Logger.hpp  crow_lib.hpp  crow_utils.hpp
CrowEngine/include/Config/: PipelineSettings.hpp  ReflectedStructs.hpp  RenderPassSettings.hpp  SettingsManager.hpp
CrowEngine/include/Core/: App.hpp  Engine.hpp  Window.hpp
CrowEngine/include/General/: crow_lib.hpp
CrowEngine/include/Utils/: FileUtilities.hpp  GenerateDefaults.hpp  runtimeReflector.hpp
CrowEngine/include/Vulkan/: VulkanBackend.hpp  VulkanCommandBuffers.hpp  VulkanDebugger.hpp  VulkanDevice.hpp  VulkanFrameBuffers.hpp  VulkanGraphicsPipeline.hpp  VulkanQueueManager.hpp  VulkanSwapChain.hpp  VulkanUtilities.hpp
CrowEngine/libs/cppr/: cppr.h  cppr.hpp  cppr_tests.hpp  descriptors.hpp  serialization.hpp  type_declaration.hpp  type_info.hpp  type_resolver.hpp
CrowEngine/resources/: CMakeLists.txt  ConfigPaths.in.hpp  DefaultPipeline.json  DefaultRenderpass.json
CrowEngine/src/: Logger.cpp  Logger.hpp  crow_lib.hpp  crow_utils.cpp  crow_utils.hpp  main.cpp
CrowEngine/src/Core/: App.cpp  App.hpp  Engine.cpp  Engine.hpp  Window.cpp  Window.hpp  core_globals.hpp
CrowEngine/src/TextEditor/: FileOpener.cpp  FileOpener.hpp
CrowEngine/src/Vulkan/: Device.cpp  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Queues.cpp  Queues.hpp  SwapChain.cpp  SwapChain.hpp  VulkanBackend.cpp  VulkanBackend.hpp  VulkanCommandBuffers.cpp  VulkanCommandBuffers.hpp  VulkanDebugger.cpp  VulkanDebugger.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameBuffers.cpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanQueueManager.cpp  VulkanQueueManager.hpp  VulkanShaderModule.cpp  VulkanShaderModule.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanUtilities.cpp  VulkanUtilities.hpp
CrowEngine/src/config/: SettingsManager.cpp  SettingsManager.hpp
